--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Debug session11
-        uses: csexton/debugger-action@master
+        uses: chousann/debugger-action@master
