--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Debug session12
         uses: chousann/debugger-action@master
+      - name: Run a multi-line script
+        run: |
+          unset TMUX
+          tmux attach
+          tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}'
+          MSG=$(tmate -S /tmp/tmate.sock display -p '#{tmate_ssh}')
+          timeout=$((15*60))
+          while [ -S /tmp/tmate.sock ]; do
+            sleep 1
+            timeout=$(($timeout-1))
+            if (( $timeout%30 == 0 )); then
+              echo $MSG
+            fi
+          done
