--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Debug session12
-        uses: chousann/debugger-action@master
+        uses: csexton/debugger-action@master
       - name: Run a multi-line script
         run: |
           unset TMUX
