--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Debug session13
         uses: chousann/debugger-action@master
+      - name: 'Send mail'
+        uses: dawidd6/action-send-mail@master
+        with:
+          server_address: smtp.163.com
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: tmate ssh channle
+          body: 123456
+          to: zhangxueshan@hyron.com
+          from: GitHub Actions
+          content_type: text/html
       - name: tmate sleep
         run: bash ./tmt.sh
