--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: tmate ssh channle
-          body: 123456
+          body: ${{ TMATE_ADDR }}
           to: zhangxueshan@hyron.com
           from: GitHub Actions
           content_type: text/html
